# ai-memory-sdk

./: README.md  pyproject.toml
.github/workflows/: publish-npm.yml  release.yml  test-pr.yml
clients/python/: memory.py  pyproject.toml
clients/python/examples/: chat.py
clients/python/tests/: test_messages.py
clients/typescript/: package-lock.json  tsconfig.json
clients/typescript/src/: client.ts  database.ts  index.ts  promptFormatter.ts  types.ts
clients/typescript/tests/: database.test.ts  integration.test.ts  messages.test.ts  promptFormatter.test.ts
docs/: tutorial.md
examples/: README.md  archival_search.py  chat.py  chat.ts  chat_with_compaction.py  context.py  context.ts  customer_insights.py  customer_support.py  generate_coding_agent_memory.py  multicontext.py  subject.py  subject.ts
shared/examples/: basic_usage.md
shared/schemas/: schema.sql
src/: client.py  database.py  prompt_formatter.py
src/python/: README.md  ai_memory_sdk.py  letta-multi-tag-search-bug.md  letta_memory.py  memory.py  nixpacks.toml  prompt_formatter.py  pyproject.toml  schemas.py
src/python/api/: README.md  main.py  memory_service.py  models.py
src/python/api/routes/: __init__.py  memory.py
src/python/examples/: chat.py  chat_with_compaction.py
src/python/tests/: test_base_url.py  test_context.py  test_documentation.py  test_edge_cases.py  test_messages.py  test_subconscious_agent.py  test_subject.py  test_timeout.py
src/typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
tests/: test_documentation.py  test_messages.py
(+13 files in other folders)
