[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letta-memory"
version = "0.1.0"
description = "An experimental SDK for using Letta subagents for pluggable memory management" 
readme = "../../README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Sarah Wooders", email = "sarah@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "letta-client",
    "openai>=1.102.0",
    "pydantic>=2.0.0",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/letta-ai/letta-memory"
Repository = "https://github.com/letta-ai/letta-memory"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
